Bootstrap fix, img invisible from md

--- a/style.css
+++ b/style.css
@@ -24,9 +24,13 @@ main{
     
 
 }
-main div:first-child{
-    display: flex;
+@media (max-width: 991px) {
+    img {
+        display: none;
+    }
+
 }
+
 
 img{
     max-width: 100%;
